# encourage

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  cereals.py  pyproject.toml  start_vllm_server.py  test.ipynb
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: lint_test.yml  main.yml  publish.yml
docs/: batch_inference.md  conversation.md  inference_runner.md  metrics_explanation.md  metrics_overview.md  metrics_tutorial.md  mlflow.md  rag_methods.md  templates.md  vllm_server.md
docs/demo/: hotpotqa.txt  hotpotqa_structured.txt  hotpotqa_template.j2  tutorial.ipynb
docs/examples/: structured_output.ipynb
src/encourage/: __init__.py
src/encourage/handler/: __init__.py  conversation_handler.py
src/encourage/llm/: __init__.py  batch_handler.py  inference_runner.py  response.py  response_wrapper.py  sampling_params.py  vllm_classes.py
src/encourage/metrics/: __init__.py  answer_faithfulness.py  answer_relevance.py  answer_similarity.py  classic.py  context_precision.py  context_recall.py  metric.py  metric_type.py  non_answer_critic.py  number_match.py  registry.py
src/encourage/prompts/: __init__.py  context.py  conversation.py  conversation_handler.py  meta_data.py  prompt.py  prompt_collection.py  prompt_reformatter.py
src/encourage/prompts/templates/: aya_default.j2  default.j2  gemma_default.j2  llama3_conv.j2  llama3_custom.j2  llama3_default.j2  mistral_default.j2  phi3-5_default.j2  phi3_default.j2
src/encourage/prompts/templates/metrics/: answer_extraction.j2  answer_faithfulness_nli.j2  answer_faithfulness_split.j2  answer_relevance.j2  context_precision.j2  context_recall.j2  llama3_answer_extraction.j2  llama3_answer_faithfulness_nli.j2  llama3_answer_faithfulness_split.j2  llama3_answer_relevance.j2  llama3_context_precision.j2  llama3_context_recall.j2  llama3_non_answer_critic.j2  non_answer_critic.j2
src/encourage/rag/: __init__.py  base_impl.py  bm25.py  hybrid_bm25.py  hyde.py  hyde_reranker.py  known_context.py  naive.py  no_context.py  rag.py  reranker.py  reranker_base.py  retrieval_only.py  self_rag.py  summarize.py
src/encourage/rag/base/: config.py  enum.py  factory.py  interface.py  rag_enum.py  rag_interface.py
src/encourage/rag/rerank/: base.py  factory.py  models.py
src/encourage/utils/: __init__.py  file_manager.py  huggingface.py  llm_mock.py  tracing.py  validate_models.py
src/encourage/vector_store/: __init__.py  chroma.py  qdrant.py  vector_store.py
src/tests/: conftest.py  fake_responses.py  test_answer_faithfulness.py  test_answer_relevance.py  test_answer_similarity.py  test_chroma.py  test_classic.py  test_context_precision.py  test_context_recall.py  test_file_manager.py  test_hybrid_bm25.py  test_hyde_rag.py  test_inference_runner.py  test_metric_classic.py  test_non_answer_critic.py  test_prompt.py  test_rag.py  test_response_wrapper.py  test_self_rag.py
src/tests/metrics/: test_answer_faithfulness.py  test_answer_relevance.py  test_answer_similarity.py  test_context_precision.py  test_context_recall.py  test_metric.py  test_metric_classic.py  test_non_answer_critic.py
src/tests/prompts/: test_conversation.py  test_prompt.py  test_response_wrapper.py
src/tests/rag/: test_base_rag.py  test_bm25.py  test_hybrid_bm25.py  test_rerank_models.py  test_reranker.py
src/tests/vector_store/: test_chroma.py
